--- a/app/css/weather.css
+++ b/app/css/weather.css
@@ -5,6 +5,7 @@
     outline: none;
     text-decoration: none;
     box-sizing: border-box;
+    -webkit-tap-highlight-color:rgba(0,0,0,0);
 }
 body{
     background-color: #f5f5f5;
