--- a/app/css/weather.css
+++ b/app/css/weather.css
@@ -184,6 +184,7 @@ ul.time-content{
     /*margin-left: 0.1rem;*/
 }
 .day{
+    position: relative;
     width: 100%;
     height: 7.78rem;
     background: #fff;
@@ -219,6 +220,15 @@ ul.time-content{
 }
 .past{
     opacity: 0.8;
+}
+.line{
+    position: absolute;
+    top:1.7rem;
+    left:-15%;
+    width: 130%;
+    height: 3.6rem;
+
+    z-index: 0;
 }
 footer>ul{
     width: 100%;
